dataset1235/2025-2/1153765216/users/1370515670/executions/2814675586_1026882843.log
== RUN (2025-08-26 19:18:21)
-- CODE: 
raio = float(input())
area = __import__pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = __import__pi * raio**2
           ^^^^^^^^^^^^
NameError: name '__import__pi' is not defined. Did you mean: '__import__'?
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = __import__pi * raio**2
           ^^^^^^^^^^^^
NameError: name '__import__pi' is not defined. Did you mean: '__import__'?
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = __import__pi * raio**2
           ^^^^^^^^^^^^
NameError: name '__import__pi' is not defined. Did you mean: '__import__'?
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = __import__pi * raio**2
           ^^^^^^^^^^^^
NameError: name '__import__pi' is not defined. Did you mean: '__import__'?
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = __import__pi * raio**2
           ^^^^^^^^^^^^
NameError: name '__import__pi' is not defined. Did you mean: '__import__'?
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = __import__pi * raio**2
           ^^^^^^^^^^^^
NameError: name '__import__pi' is not defined. Did you mean: '__import__'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:49:03)
-- CODE: 
raio = float(input())
area = ModuleNotFoundErro(pi * raio**2)
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = ModuleNotFoundErro(pi * raio**2)
           ^^^^^^^^^^^^^^^^^^
NameError: name 'ModuleNotFoundErro' is not defined. Did you mean: 'ModuleNotFoundError'?
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = ModuleNotFoundErro(pi * raio**2)
           ^^^^^^^^^^^^^^^^^^
NameError: name 'ModuleNotFoundErro' is not defined. Did you mean: 'ModuleNotFoundError'?
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = ModuleNotFoundErro(pi * raio**2)
           ^^^^^^^^^^^^^^^^^^
NameError: name 'ModuleNotFoundErro' is not defined. Did you mean: 'ModuleNotFoundError'?
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = ModuleNotFoundErro(pi * raio**2)
           ^^^^^^^^^^^^^^^^^^
NameError: name 'ModuleNotFoundErro' is not defined. Did you mean: 'ModuleNotFoundError'?
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = ModuleNotFoundErro(pi * raio**2)
           ^^^^^^^^^^^^^^^^^^
NameError: name 'ModuleNotFoundErro' is not defined. Did you mean: 'ModuleNotFoundError'?
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = ModuleNotFoundErro(pi * raio**2)
           ^^^^^^^^^^^^^^^^^^
NameError: name 'ModuleNotFoundErro' is not defined. Did you mean: 'ModuleNotFoundError'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:43:23)
-- CODE: 
raio = float(input())
area = i * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = i * raio**2
           ^
NameError: name 'i' is not defined. Did you mean: 'id'?
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = i * raio**2
           ^
NameError: name 'i' is not defined. Did you mean: 'id'?
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = i * raio**2
           ^
NameError: name 'i' is not defined. Did you mean: 'id'?
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = i * raio**2
           ^
NameError: name 'i' is not defined. Did you mean: 'id'?
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = i * raio**2
           ^
NameError: name 'i' is not defined. Did you mean: 'id'?
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = i * raio**2
           ^
NameError: name 'i' is not defined. Did you mean: 'id'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:17:36)
-- CODE: 
raio = float(input())
area = import pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
File "XXXX", line 2
    area = import pi * raio**2
           ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
File "XXXX", line 2
    area = import pi * raio**2
           ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
File "XXXX", line 2
    area = import pi * raio**2
           ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
File "XXXX", line 2
    area = import pi * raio**2
           ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
File "XXXX", line 2
    area = import pi * raio**2
           ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
File "XXXX", line 2
    area = import pi * raio**2
           ^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:59:01)
-- CODE: 
raio = float(input(3.5))
area = 3.14 * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
3.50.0079
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
3.532.1536
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
3.538.465
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
3.5452.16
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
3.5221.5584
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
3.5346.185
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:58:45)
-- CODE: 
raio = float(input(3.5))
area = 3.14  raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
File "XXXX", line 2
    area = 3.14  raio**2
                 ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
File "XXXX", line 2
    area = 3.14  raio**2
                 ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
File "XXXX", line 2
    area = 3.14  raio**2
                 ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
File "XXXX", line 2
    area = 3.14  raio**2
                 ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
File "XXXX", line 2
    area = 3.14  raio**2
                 ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
File "XXXX", line 2
    area = 3.14  raio**2
                 ^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:52:39)
-- CODE: 
raio = float(input())
area = pi * raio**2
print(round(area,4))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:16:43)
-- CODE: 
raio = float(input())
area = pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:52:33)
-- CODE: 
raio = float(input())
area = pi * raio**2
print(round(area,4))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:00:09)
-- CODE: 
raio = float(input(3.5))
area = 3.14 * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
3.50.0079
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
3.532.1536
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
3.538.465
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
3.5452.16
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
3.5221.5584
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
3.5346.185
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
